[gd_scene load_steps=15 format=2]

[ext_resource path="res://Global/WinMenu/WinMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/10895.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/global/win_menu_bg.png" type="Texture" id=3]
[ext_resource path="res://assets/global/btn_restart.png" type="Texture" id=4]
[ext_resource path="res://assets/global/btn_restart_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/global/btn_main_menu.png" type="Texture" id=6]
[ext_resource path="res://assets/global/btn_main_menu_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/global/btn_main_menu_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/global/btn_restart_hover.png" type="Texture" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
resource_name = "overlay_color"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.635294, 0.0784314, 0.588235 ), Color( 0.101961, 0.0980392, 0.196078, 0.784314 ), Color( 1, 0.635294, 0.0784314, 0.588235 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 53
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=4]
antialiased = false
font_path = "res://assets/10895.otf"

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = SubResource( 4 )

[node name="WinDialog" type="PopupDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -487.5
margin_top = -275.0
margin_right = 487.5
margin_bottom = 275.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.635294, 0.0784314, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/overlay_color = SubResource( 2 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 290, 155 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
centered = false

[node name="Title" type="Label" parent="Bg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.5
margin_top = 1.0
margin_right = 279.5
margin_bottom = 65.0
rect_scale = Vector2( 0.14, 0.14 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.776471, 0.270588, 0.141176, 1 )
text = "Победа"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Status" type="Label" parent="Bg"]
anchor_top = -0.160714
anchor_bottom = -0.160714
margin_left = 6.0
margin_top = 22.0
margin_right = 116.0
margin_bottom = 57.0
rect_scale = Vector2( 0.2, 0.2 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.164706, 0.184314, 0.305882, 1 )
text = "Статус:"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="StatusInfo" type="Label" parent="Bg"]
anchor_top = -0.160714
anchor_bottom = -0.160714
margin_left = 29.0
margin_top = 22.0
margin_right = 249.0
margin_bottom = 57.0
rect_scale = Vector2( 0.2, 0.2 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.780392, 0.811765, 0.866667, 1 )
text = "игра пройдена"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Tasks" type="Label" parent="Bg"]
anchor_top = -0.160714
anchor_bottom = -0.160714
margin_left = 6.0
margin_top = 31.0
margin_right = 121.0
margin_bottom = 66.0
rect_scale = Vector2( 0.2, 0.2 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.164706, 0.184314, 0.305882, 1 )
text = "Задачи:"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TasksInfo" type="Label" parent="Bg"]
anchor_left = -3.86298e-07
anchor_top = -0.170213
anchor_right = -3.86298e-07
anchor_bottom = -0.170213
margin_left = 29.0
margin_top = 31.0
margin_right = 249.0
margin_bottom = 66.0
rect_scale = Vector2( 0.2, 0.2 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.780392, 0.811765, 0.866667, 1 )
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Accuracy" type="Label" parent="Bg"]
anchor_top = -0.160714
anchor_bottom = -0.160714
margin_left = 6.0
margin_top = 40.0
margin_right = 151.0
margin_bottom = 75.0
rect_scale = Vector2( 0.2, 0.2 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.164706, 0.184314, 0.305882, 1 )
text = "Точность:"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AccuracyInfo" type="Label" parent="Bg"]
anchor_left = -3.86298e-07
anchor_top = -0.170213
anchor_right = -3.86298e-07
anchor_bottom = -0.170213
margin_left = 35.0
margin_top = 40.0
margin_right = 230.0
margin_bottom = 75.0
rect_scale = Vector2( 0.2, 0.2 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.780392, 0.811765, 0.866667, 1 )
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MainMenu" type="TextureButton" parent="Bg"]
margin_left = 24.0
margin_top = 40.0
margin_right = 36.0
margin_bottom = 52.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TextureButton" parent="Bg"]
margin_left = 43.0
margin_top = 40.0
margin_right = 55.0
margin_bottom = 52.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Bg/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Bg/Restart" to="." method="_on_Restart_pressed"]
